:white_check_mark: Test: 테스트 메서드의 get(0)을 getFirst()로 변경
- 메서드의 의도를 명료화하기 위해 수정함